2006-10-24  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad):
	Only push EOS on fatal errors so we don't screw up seeking.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* README:
	Adds docs about hideTimeout param.

	* src/com/fluendo/player/Cortado.java: (Cortado..init),
	(Cortado..run), (Cortado.), (Cortado..realRun), (Cortado..paint),
	(Cortado..setStatusVisible), (Cortado..handleMessage),
	(Cortado..doPause), (Cortado..doPlay), (Cortado..doStop):
	Add hideTimeout param.
	Fix stop again.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* README:
	Document javascrip methods.

	* src/com/fluendo/player/Cortado.java: (Cortado..handleMessage):
	Add doPlay(),doPause(),doStop(),doSeek() methods so that they can be
	used from javascript. Fixes #155

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jheora/YUVBuffer.java:
	(YUVBuffer.prepareRGBData):
	Catch Exceptions while doing color conversions. Fixes #283.

	* src/com/fluendo/player/Cortado.java: (Cortado..handleMessage):
	Don't overwrite error messages.

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.buildMultipart), (CortadoPipeline.cleanup):
	Post an error when the media type cannot be found.

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad):
	Post an error when streaming stops.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..handleMessage):
	Make sure we never overwrite error messages. Fixes #351.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* README:
	Add showStatus param

	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado..getParameterInfo), (Cortado..getParam),
	(Cortado..shutdown), (Cortado.), (Cortado..init),
	(Cortado..realRun), (Cortado..paint), (Cortado..setStatusVisible),
	(Cortado..intersectStatus), (Cortado..mouseClicked),
	(Cortado..mouseEntered), (Cortado..mouseExited),
	(Cortado..mousePressed), (Cortado..mouseReleased),
	(Cortado..mouseDragged), (Cortado..mouseMoved),